<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:padding="16dp"
    tools:context=".ui.activity.LoginActivity"
    android:background="@drawable/background_gradient">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Kimty’s Collection"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:paddingBottom="8dp"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="All kinds of children Accessories"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:paddingBottom="16dp" />


    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="Enter email"
        android:padding="12dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="Enter Password"
        android:padding="12dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/btnForget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password?"
        android:textColor="@android:color/black"
        android:layout_gravity="center"
        android:paddingTop="8dp"
        android:clickable="true"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Log In"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/displayLoginResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/btnSignupnavigate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:paddingTop="16dp"
        android:text="Don't have an account? Click here"
        android:textColor="@android:color/black" />

</LinearLayout>